--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
         <a href="safe-trade-zones.html" class="hover:opacity-80">Safe Trade Zones</a>
         <a href="contact.html" class="hover:opacity-80">Contact</a>
         <a href="#waitlist" class="px-5 py-3 rounded-xl bg-[var(--gold)] text-black font-semibold hover:opacity-90">Join Waitlist</a>
+        <a href="post.html" class="px-5 py-3 rounded-xl border border-white/15 bg-white/5 hover:bg-white/10">
+  Post Listing
+</a>
       </div>
     </div>
   </nav>
@@ -226,4 +229,5 @@
 </script>
 </body>
 </html>
+
 
